feat(team service): updated team